feat(admin): add reset password feature

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,8 @@
       </form>
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
-      <button (click)="doLogin()"  mdl-button mdl-colored mdl-ripple>Connexion</button>
+      <button (click)="doLogin()"  mdl-button mdl-colored mdl-ripple>{{'ADMIN.LOGIN.CONNEXION' | translate}}</button>
+      <button (click)="doReset()"  mdl-button mdl-colored mdl-ripple>{{'ADMIN.LOGIN.RESET' | translate}}</button>
     </mdl-card-actions>
   </mdl-card>
 </div>
