fix(project): fix imports for production bundle

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
       <button (click)="doLogin()"  mdl-button mdl-colored mdl-ripple>{{'ADMIN.LOGIN.CONNEXION' | translate}}</button>
-      <button (click)="doReset()"  mdl-button mdl-colored mdl-ripple>{{'ADMIN.LOGIN.RESET' | translate}}</button>
+      <!--<button (click)="doReset()"  mdl-button mdl-colored mdl-ripple>{{'ADMIN.LOGIN.RESET' | translate}}</button>-->
     </mdl-card-actions>
   </mdl-card>
 </div>
