chore: upgrade to Angular4 and @angular-mdl

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,4 +1,4 @@
-@import "~angular2-mdl/scss/color-definitions";
+@import "~@angular-mdl/core/scss/color-definitions";
 $layout-drawer-width: 456px;
 $color-primary: $palette-green-500;
 $color-primary-dark: $palette-green-700;
