--- a/src/app/admin/admin-event-list/admin-event-list.component.html
+++ b/src/app/admin/admin-event-list/admin-event-list.component.html
@@ -26,6 +26,6 @@
   </mdl-list>
 </div>
 <button id="add-button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect"
-        (click)="router.navigate(['admin','events','edit'])">
+        (click)="onAddButtonClick()">
   <i class="material-icons">add</i>
 </button>
